--- a/index.html
+++ b/index.html
@@ -30,24 +30,27 @@
         .style-jira-sidebar { background-color: #FAFBFC; border-right: 1px solid #dfe1e6; }
         .style-jira-card { background-color: #ffffff; border: 1px solid #dfe1e6; box-shadow: 0 1px 1px rgba(9, 30, 66, 0.25); border-radius: 3px; }
 
-        /* Style 3: Monday (Vibrant Modal) */
+        /* Style 3: Monday (Vibrant Modal) - Refined Radius */
         .style-monday-overlay { background-color: rgba(0, 0, 0, 0.4); backdrop-filter: blur(4px); }
         .style-monday-modal { background-color: #f7f9fc; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); }
         .style-monday-card { 
             background: white; 
             border: 1px solid #E6E9EF; 
-            border-radius: 12px; 
+            border-radius: 8px; /* Reduced radius for professionalism */
             box-shadow: 0 2px 4px rgba(0,0,0,0.02);
             overflow: hidden;
         }
         .style-monday-card:hover {
             border-color: #0073EA;
-            box-shadow: 0 10px 20px rgba(0,115,234,0.1);
+            box-shadow: 0 8px 16px rgba(0,115,234,0.1);
         }
         .monday-tag { transition: all 0.2s; }
         .monday-tag:hover { background-color: #e2e8f0; color: #0f172a; }
         .monday-tag.active { background-color: #0f172a; color: white; }
-        .monday-banner { background: linear-gradient(120deg, #6C6CFF 0%, #FF5ACD 100%); }
+        
+        /* Dual Banners Gradients */
+        .monday-banner-1 { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+        .monday-banner-2 { background: linear-gradient(135deg, #0ba360 0%, #3cba92 100%); }
     </style>
 </head>
 <body class="text-slate-800 h-screen overflow-hidden">
@@ -160,6 +163,7 @@
                     return 'bg-blue-100 text-blue-600';
                 };
                 iconContainerClass = getTypeColor(item.type);
+                // Reduced radius for button
                 btnClasses = "bg-slate-50 text-slate-600 px-3 py-1.5 rounded-md text-xs hover:bg-slate-100 font-semibold transition-colors";
             }
 
@@ -168,20 +172,20 @@
                     {/* Card Body */}
                     <div className={style === 'monday' ? 'p-5 flex flex-col h-full' : 'flex flex-col h-full'}>
                         <div className="flex justify-between items-start mb-4">
-                            <div className={`w-12 h-12 rounded-xl flex items-center justify-center text-xl shrink-0 transition-transform group-hover:scale-110 ${iconContainerClass}`}>
+                            <div className={`w-12 h-12 rounded-lg flex items-center justify-center text-xl shrink-0 transition-transform group-hover:scale-110 ${iconContainerClass}`}>
                                 <i className={`fas ${item.icon || 'fa-cube'}`}></i>
                             </div>
                             
                             <div className="flex flex-col items-end gap-1">
                                 {item.tag && (
-                                    <span className={`text-[10px] font-bold px-2 py-0.5 rounded-full uppercase tracking-wide ${
+                                    <span className={`text-[10px] font-bold px-2 py-0.5 rounded-md uppercase tracking-wide ${
                                         style === 'monday' ? 'bg-orange-100 text-orange-600' : 'bg-slate-100 text-slate-500'
                                     }`}>
                                         {item.tag}
                                     </span>
                                 )}
                                 {/* Type Badge */}
-                                <span className="text-[10px] text-slate-400 font-medium px-1.5 py-0.5 border border-slate-100 rounded">
+                                <span className="text-[10px] text-slate-400 font-medium px-1.5 py-0.5 border border-slate-100 rounded-md">
                                     {RESOURCE_TYPES.find(t => t.id === item.type)?.label.split(' ')[0]}
                                 </span>
                             </div>
@@ -202,7 +206,7 @@
                                 {!item.installs && !item.users && <span>{item.author || 'Official'}</span>}
                             </div>
                             {style === 'monday' ? (
-                                <button className="text-blue-600 bg-blue-50 px-4 py-1.5 rounded text-xs font-bold hover:bg-blue-100 transition-colors">
+                                <button className="text-blue-600 bg-blue-50 px-4 py-1.5 rounded-md text-xs font-bold hover:bg-blue-100 transition-colors">
                                     获取
                                 </button>
                             ) : style === 'jira' ? (
@@ -256,7 +260,7 @@
             // 1. ClickUp Style (Standard Modal)
             const renderClickUp = () => (
                 <div className="fixed inset-0 style-clickup-overlay flex items-center justify-center z-50 p-4">
-                    <div className="style-clickup-modal w-full max-w-6xl h-[85vh] rounded-xl flex flex-col overflow-hidden animate-fade-in-up">
+                    <div className="style-clickup-modal w-full max-w-[90vw] h-[90vh] rounded-xl flex flex-col overflow-hidden animate-fade-in-up">
                         {/* Minimal Header */}
                         <div className="bg-white px-8 py-5 border-b border-slate-100 flex items-center justify-between shrink-0">
                             <h2 className="text-xl font-bold text-slate-800">App Center</h2>
@@ -297,8 +301,8 @@
 
             // 2. Jira Style (Sidebar Enterprise Modal)
             const renderJira = () => (
-                <div className="fixed inset-0 style-jira-overlay flex items-center justify-center z-50 p-4 sm:p-10">
-                    <div className="style-jira-modal w-full max-w-6xl h-full rounded shadow-2xl flex overflow-hidden">
+                <div className="fixed inset-0 style-jira-overlay flex items-center justify-center z-50 p-4">
+                    <div className="style-jira-modal w-full max-w-[90vw] h-[90vh] rounded shadow-2xl flex overflow-hidden">
                         {/* Sidebar */}
                         <div className="w-64 style-jira-sidebar flex flex-col shrink-0">
                             <div className="p-5 border-b border-slate-200">
@@ -334,14 +338,16 @@
                 </div>
             );
 
-            // 3. Monday Style (Vibrant Modal - Updated)
+            // 3. Monday Style (Vibrant Modal - Updated Dual Banner & Radius)
             const renderMonday = () => (
-                <div className="fixed inset-0 style-monday-overlay flex items-center justify-center z-50 p-4 sm:p-8">
-                    <div className="style-monday-modal w-full max-w-6xl h-[90vh] rounded-2xl flex flex-col overflow-hidden relative animate-fade-in-down">
+                <div className="fixed inset-0 style-monday-overlay flex items-center justify-center z-50 p-4">
+                    {/* Radius changed from rounded-2xl to rounded-xl */}
+                    <div className="style-monday-modal w-full max-w-[95vw] h-[92vh] rounded-xl flex flex-col overflow-hidden relative animate-fade-in-down">
                         {/* Header */}
                         <div className="bg-white px-6 py-4 flex items-center justify-between shrink-0 border-b border-slate-100">
                             <div className="flex items-center gap-3">
-                                <div className="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center text-white text-lg shadow-sm">
+                                {/* Radius changed from rounded-lg to rounded-md */}
+                                <div className="w-8 h-8 bg-blue-600 rounded-md flex items-center justify-center text-white text-lg shadow-sm">
                                     <i className="fas fa-shapes"></i>
                                 </div>
                                 <h1 className="text-xl font-extrabold text-slate-800 tracking-tight">Marketplace</h1>
@@ -358,19 +364,21 @@
                                 <div className="flex flex-col sm:flex-row gap-4 mb-6">
                                     <div className="flex-1 relative">
                                         <i className="fas fa-search absolute left-4 top-1/2 -translate-y-1/2 text-slate-400"></i>
+                                        {/* Input rounded-xl -> rounded-lg */}
                                         <input 
                                             type="text" 
                                             placeholder="搜索应用、集成、插件或模板..." 
                                             value={searchTerm}
                                             onChange={(e) => setSearchTerm(e.target.value)}
-                                            className="w-full pl-11 pr-4 py-3 bg-white border border-slate-200 rounded-xl text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all outline-none shadow-sm"
+                                            className="w-full pl-11 pr-4 py-3 bg-white border border-slate-200 rounded-lg text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all outline-none shadow-sm"
                                         />
                                     </div>
                                     <div className="relative min-w-[160px]">
+                                        {/* Select rounded-xl -> rounded-lg */}
                                         <select 
                                             value={activeType} 
                                             onChange={(e) => setActiveType(e.target.value)}
-                                            className="w-full appearance-none bg-white border border-slate-200 text-slate-700 py-3 pl-4 pr-10 rounded-xl text-sm font-bold focus:outline-none focus:ring-2 focus:ring-blue-500 hover:border-blue-400 cursor-pointer shadow-sm"
+                                            className="w-full appearance-none bg-white border border-slate-200 text-slate-700 py-3 pl-4 pr-10 rounded-lg text-sm font-bold focus:outline-none focus:ring-2 focus:ring-blue-500 hover:border-blue-400 cursor-pointer shadow-sm"
                                         >
                                             {RESOURCE_TYPES.map(t => (
                                                 <option key={t.id} value={t.id}>{t.label}</option>
@@ -391,17 +399,33 @@
                                     </div>
                                 </div>
 
-                                {/* Banner */}
+                                {/* Dual Banner Row (Conditional) */}
                                 {activeCategory === 'all' && !searchTerm && (
-                                    <div className="monday-banner rounded-2xl p-8 mb-8 text-white shadow-lg flex items-center justify-between relative overflow-hidden group">
-                                        <div className="relative z-10 max-w-xl">
-                                            <span className="bg-white/20 text-white text-[10px] font-bold px-2 py-1 rounded uppercase tracking-wider mb-2 inline-block">New Arrival</span>
-                                            <h2 className="text-3xl font-extrabold mb-2">解锁 AI 生产力</h2>
-                                            <p className="text-white/90 mb-6">探索最新的 AI Agent 与智能节点。</p>
-                                            <button className="bg-white text-blue-600 px-5 py-2.5 rounded-lg font-bold shadow-md hover:bg-blue-50 transition-colors">查看 AI 专区</button>
+                                    <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
+                                        {/* Banner 1: AI */}
+                                        <div className="monday-banner-1 rounded-xl p-6 text-white shadow-md relative overflow-hidden group cursor-pointer transition-transform hover:-translate-y-1">
+                                            <div className="relative z-10">
+                                                <span className="bg-white/20 text-white text-[10px] font-bold px-2 py-1 rounded-md uppercase tracking-wider mb-2 inline-block">Trending</span>
+                                                <h2 className="text-2xl font-bold mb-1">解锁 AI 生产力</h2>
+                                                <p className="text-white/80 text-sm mb-4">智能 Agent 与自动化节点合集。</p>
+                                                <button className="bg-white/20 hover:bg-white/30 backdrop-blur-sm text-white px-4 py-1.5 rounded-lg text-xs font-bold transition-colors">
+                                                    查看专区
+                                                </button>
+                                            </div>
+                                            <i className="fas fa-robot absolute -right-6 -bottom-6 text-[120px] text-white opacity-20 group-hover:scale-110 transition-transform duration-500"></i>
                                         </div>
-                                        <div className="hidden md:block absolute right-10 top-1/2 -translate-y-1/2 transition-transform duration-700 group-hover:scale-110">
-                                            <i className="fas fa-robot text-[160px] text-white opacity-20"></i>
+
+                                        {/* Banner 2: Developer Tools (or Featured) */}
+                                        <div className="monday-banner-2 rounded-xl p-6 text-white shadow-md relative overflow-hidden group cursor-pointer transition-transform hover:-translate-y-1">
+                                            <div className="relative z-10">
+                                                <span className="bg-white/20 text-white text-[10px] font-bold px-2 py-1 rounded-md uppercase tracking-wider mb-2 inline-block">New</span>
+                                                <h2 className="text-2xl font-bold mb-1">开发者工具箱</h2>
+                                                <p className="text-white/80 text-sm mb-4">从 DevOps 到文档管理的必备神器。</p>
+                                                <button className="bg-white/20 hover:bg-white/30 backdrop-blur-sm text-white px-4 py-1.5 rounded-lg text-xs font-bold transition-colors">
+                                                    立即探索
+                                                </button>
+                                            </div>
+                                            <i className="fas fa-tools absolute -right-6 -bottom-6 text-[120px] text-white opacity-20 group-hover:scale-110 transition-transform duration-500"></i>
                                         </div>
                                     </div>
                                 )}
