--- a/index.html
+++ b/index.html
@@ -352,9 +352,24 @@
                                 </div>
                                 <h1 className="text-xl font-extrabold text-slate-800 tracking-tight">Marketplace</h1>
                             </div>
-                            <button className="w-8 h-8 rounded-full bg-slate-50 hover:bg-slate-100 flex items-center justify-center text-slate-400 hover:text-slate-600 transition-colors">
-                                <i className="fas fa-times"></i>
-                            </button>
+                            
+                            <div className="flex items-center gap-4">
+                                {/* New Submit Request Button */}
+                                <button className="hidden md:flex items-center gap-2 bg-gradient-to-r from-orange-50 to-amber-50 text-orange-600 border border-orange-100 px-4 py-2 rounded-lg text-sm font-bold hover:from-orange-100 hover:to-amber-100 transition-all shadow-sm">
+                                    <i className="fas fa-lightbulb"></i>
+                                    提报需求
+                                </button>
+                                
+                                <div className="h-6 w-px bg-slate-200 hidden md:block"></div>
+
+                                <button className="hidden md:block text-sm font-bold text-slate-500 hover:text-slate-800">
+                                    我的应用
+                                </button>
+
+                                <button className="w-8 h-8 rounded-full bg-slate-50 hover:bg-slate-100 flex items-center justify-center text-slate-400 hover:text-slate-600 transition-colors">
+                                    <i className="fas fa-times"></i>
+                                </button>
+                            </div>
                         </div>
 
                         {/* Body */}
